--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Online tool for developing and understanding CSS Grid layouts.">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-
     <title>CSS Grid Playground</title>
 
     <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,700" rel="stylesheet"> 
@@ -251,13 +251,7 @@
         </section>
 
         <!-- Empty square -->
-        <div
-            class="box-styles"
-            :style="{
-                display: 'grid',
-                gridAreas: 'empty',
-            }">
-        </div>
+        <div id="empty-square" class="box-styles"></div>
 
         <!-- Column List -->
         <section
@@ -351,12 +345,15 @@
         <!-- Contact Information -->
         <section id="contact-info">
             <p>
-                <a href="http://github.com/yahmez00/css-grid-playground" target="_blank">GitHub</a>
+                Confused? Learn more at 
+                <a href="https://css-tricks.com/snippets/css/complete-guide-grid/" target="_blank">CSS Tricks guide.</a>
             </p>
 
             <p>
-                designed and developed by
+                Designed and developed by
                 <a href="https://twitter.com/yahmez00" target="_blank">@yahmez00</a>
+                |
+                <a href="http://github.com/yahmez00/css-grid-playground" target="_blank">GitHub</a>
             </p>
         </section>
     </div>
